# kinectcap

./: CMakeLists.txt  KinectCapture.cpp  README.md  cMakeLists.txt  csv2pcd.cpp  kcap.cpp  pcd2csv.cpp  pcd2pic.cpp  viewPCD.cpp
